--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ nav {
   width: 123px;
   height: 32px;
 }
+.menu-list {
+  display: flex;
+  gap: 40px;
+}
 
 .menu-link {
   color: #131316;
@@ -38,14 +42,10 @@ nav {
   font-weight: 500;
   line-height: 150%;
 }
-
-.menu-list {
-  display: flex;
-  gap: 40px;
-}
-
 .btn-login {
-  font-weight: 500;
+  padding: 12px 24px;
+  border-radius: 12px;
+  background-color: #f5f5f5;
 }
 
 .link:hover,
